dataset/local/tf_eks_nodegroup_remote_access/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-nodegroup-remote-access
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: check-nodegroup-remote-access
    kind: Plan
    resources:
      - good-plan
    result: pass
  - policy: check-nodegroup-remote-access
    kind: Plan
    resources:
      - bad-plan
    result: fail
